<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Movie Database (TMDb)</string>
    <string name="app_title">The Movie Database (TMDb)</string>
    <string name="app_title_released_today">Released Today</string>

    <!-- Navigation Bar -->
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_favorites">Favorites</string>

    <!-- App Bar -->
    <string name="settings">Settings</string>
    <string name="search_movie_or_tv_show">Search Movie or TV Show</string>

    <!-- Content Titles -->
    <string name="user_score">User Score</string>
    <string name="released_date">Released Date:</string>
    <string name="overview">Overview</string>
    <string name="img_content_desc_backdrop">This is backdrop image of movie or tv show</string>
    <string name="img_content_desc_poster">This is poster image of movie or tv show</string>
    <string name="popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="original_language">Original Language</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="no_overview_available">We don\'t have any sinopsis in this language yet. Please help us to add it.</string>
    <string name="no_movie_results">No Movie results found.</string>
    <string name="no_tv_show_results">No TV Show results found.</string>

    <!-- Toaster -->
    <string name="set_favorite">Add this to Favorite List</string>
    <string name="unset_favorite">Remove this from Favorite list</string>
    <string name="no_data">No data this time</string>
    <string name="daily_reminder_set">Daily Reminder is set\nNotification will appear at 7 a.m.</string>
    <string name="daily_reminder_unset">Daily Reminder turned off</string>
    <string name="release_today_reminder_set">Release Today Reminder is set\nNotification will appear at 8 a.m.</string>
    <string name="release_today_reminder_unset">Release Today Reminder turned off</string>

    <!-- SearchView Query Hint -->
    <string name="search_movie">Search Film…</string>
    <string name="search_tv_show">Search TV Show…</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Key -->
    <string name="key_daily_reminder" translatable="false">key_daily_reminder</string>
    <string name="key_release_reminder" translatable="false">key_release_reminder</string>
    <string name="key_to_language_settings" translatable="false">key_to_language_settings</string>

    <!-- Preference Titles -->
    <string name="reminder_header">Reminder</string>
    <string name="language_header">Language</string>

    <!-- Reminder Preferences -->
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="release_reminder_title">Release Reminder</string>
    <string name="daily_reminder_summary">Remind me to check this app again</string>
    <string name="release_reminder_summary">Remind me if there is a movie released today</string>

    <!-- Langauge Preferences -->
    <string name="language_settings_title">Change Language</string>

    <!-- Notification Message -->
    <string name="daily_reminder_message">Good Morning! Let\'s start your day by discovering some movies! </string>
    <string name="release_today_reminder_no_new_movies_notif">Looks like no movie is released today</string>
    <string name="release_today_reminder_message">has been released! Come discover it!</string>
    <string name="release_today_content_text_notif">Movies has been released today! Come discover it!</string>
    <string name="release_today_content_text_multiple_notif">has been released!</string>
    <string name="release_today_inbox_style_big_title_notif">New Movies</string>

    <!-- Widget -->
    <string name="appwidget_text">Favorite Movie List</string>
</resources>
